--- a/style/responsive.css
+++ b/style/responsive.css
@@ -7,47 +7,54 @@
     margin-bottom: 25px;
     margin-right: 3px;
   }
+
+  footer {
+		width:100%;
+	}
 }
 
 
 /* Untuk Smartphone */
 @media all and (max-width: 670px) {
  
-.teams {
-    flex-direction: column;
-}
-
-.profile-item {
-    flex: auto;
-    margin: 0 auto;
-    width: 100%;
-    margin-bottom: 27px;
-}
-
-.title {
-    width: 100%;
-    margin-bottom: 10px;
-}
-
-.profile-item p {
-    word-wrap: break-word;
-    overflow-wrap: break-word;
-    hyphens: auto;
-}
-
-.image img {
-    width: 60%;
-    height: 500px;
-}
-  
-.isi {
-    width: 100%;
-    height:50px;
+  .teams {
+      flex-direction: column;
   }
-.isi:hover {
-  opacity: 1;
-    width: 100%;
-  height: 100px;
-}
+
+  .profile-item {
+      flex: auto;
+      margin: 0 auto;
+      width: 100%;
+      margin-bottom: 27px;
+  }
+
+  .title {
+      width: 100%;
+      margin-bottom: 10px;
+  }
+
+  .profile-item p {
+      word-wrap: break-word;
+      overflow-wrap: break-word;
+      hyphens: auto;
+  }
+
+  .image img {
+      width: 60%;
+      height: 500px;
+  }
+    
+  .isi {
+      width: 100%;
+      height:50px;
+    }
+  .isi:hover {
+    opacity: 1;
+      width: 100%;
+    height: 100px;
+  }
+  footer {
+    width:100%;
+  }
 }
 
