--- a/style/style.css
+++ b/style/style.css
@@ -34,7 +34,8 @@ a {
 /* Header */
 header {
     height: 60px;
-    background-color: rgba(38, 70, 83, 5);
+    /* background-color: rgba(38, 70, 83, 5); */
+    background-color: #718093;
     color: #ffffff;
     /* color: black; */
     box-shadow: 0 12px 9px 0 rgba(0, 0, 0, 0.5);
@@ -158,7 +159,7 @@ span {
   
 .isi:hover {
     opacity: 1;
-      width: 170px;
+    width: 170px;
     height: 150px;
 }
 
@@ -170,9 +171,45 @@ main {
     margin: 0 auto;
         /* tambahan */
         padding: 10px 0 30px 0;
-        background-image: url(../images/main1.png);
+        background-image: url(../../images/main1.png);
         background-size: contain;
         /* color: white; */
         color: black;
         text-align: center;
+}
+
+
+/* ------------------------------------- */
+/* footer section  */
+
+footer {
+    background-color: #718093;
+	padding:10px 10px;
+	text-align: center;
+}
+
+footer h1{
+	font-size: 24px;
+	font-family: Garamond;
+}
+footer p{
+	font-size: 15px;
+	color: white;
+    font-family: "Brush Script MT";
+}
+
+footer img{
+	width:75px;
+}
+
+.satu {
+	color:red;
+}
+
+.dua {
+	color:yellow;
+}
+
+.tiga {
+	color:orange;
 }
