--- a/style/style.css
+++ b/style/style.css
@@ -26,19 +26,19 @@ a {
 .title {
     border-bottom: 1px solid #2A9D8F;
     padding-bottom: 5px;
-    width: 10%;
+    width: 20%;
     margin: auto;
-    font-size: 20px;
+    font-size: 30px;
 }
 
-/* Header */
+/* Header Section */
 header {
-    height: 60px;
-    /* background-color: rgba(38, 70, 83, 5); */
+    height: 70px;
     background-color: #718093;
     color: #ffffff;
-    /* color: black; */
     box-shadow: 0 12px 9px 0 rgba(0, 0, 0, 0.5);
+    width: 100%;
+    z-index: 10;
 }
 
 header h2 {
@@ -46,16 +46,38 @@ header h2 {
     padding: 15px;
 }
 
-nav {
+.header-left {
+    float: left;
+    font-size:30px;
+    padding: 17px;
+    color: #FFFFFF;
+    /* background-color: #2c3e50; */
+    text-align: center;
+}
+  
+.header-right {
     float: right;
-    margin-right: 20px;
-    margin-top: 17px;
+    font-family:Lucida Sans Unicode;
+    padding: 10px 20px;
+}
+  
+.header-left p {
+    margin-left: 10px;
+}
+  
+.header-right a {
+    line-height: 65px;
+    padding: 0 25px;
+    color: white;
+    display: block;
+    float: left;
+    transition: all 0.5s;
+}
+  
+.header-right a:hover {
+    background-color: #95a5a6;
 }
 
-nav li {
-    display: inline-block;
-    padding: 0 7px;
-}
 
 
 /* top */
@@ -71,6 +93,18 @@ nav li {
     opacity: 0.7;
     font-size: 50px;
 }
+
+nav {
+    float: right;
+    margin-right: 20px;
+    margin-top: 17px;
+}
+
+nav li {
+    display: inline-block;
+    padding: 0 7px;
+}
+
 
 /* contents */
 .contents {
@@ -119,8 +153,6 @@ span {
     font-weight: bold;
 }
 
-/* ----------------------------------- */
-
 .box1 {
     background-color: lightseagreen;
   }
@@ -163,23 +195,6 @@ span {
     height: 150px;
 }
 
-
-/* ----------------
-tambahan */
-
-main {
-    margin: 0 auto;
-        /* tambahan */
-        padding: 10px 0 30px 0;
-        background-image: url(https://decko14.github.io/projectI02dev/images/main1.png);
-        background-size: contain;
-        /* color: white; */
-        color: black;
-        text-align: center;
-}
-
-
-/* ------------------------------------- */
 /* footer section  */
 
 footer {
@@ -212,4 +227,19 @@ footer img{
 
 .tiga {
 	color:orange;
+}
+
+
+
+/* ----------------
+tambahan */
+
+main {
+    margin: 0 auto;
+    padding: 10px 0 30px 0;
+    /* background-image: url(https://decko14.github.io/projectI02dev/images/main1.png); */
+    background-image: url(main1.png);
+    background-size: contain;
+    color: black;
+    text-align: center;
 }
